--- a/.gitignore
+++ b/.gitignore
@@ -397,5 +397,5 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
-/FBXSDK/debugger/*.lib
-/FBXSDK/debugger/*.dll
+/FBXSDK/debug/*.lib
+/FBXSDK/debug/*.dll
